[gd_scene load_steps=19 format=2]

[ext_resource path="res://Viking.gd" type="Script" id=1]
[ext_resource path="res://assets/char/shield.png" type="Texture" id=2]
[ext_resource path="res://assets/char/axe.png" type="Texture" id=3]
[ext_resource path="res://assets/char/body/Body_sprite_viking1.png" type="Texture" id=4]
[ext_resource path="res://assets/char/body/ArmR_sprite_viking1.png" type="Texture" id=5]
[ext_resource path="res://assets/char/body/Face_sprite_viking1.png" type="Texture" id=6]
[ext_resource path="res://assets/music/jump_sound.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/music/PlayerDie.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.8551
height = 34.9981

[sub_resource type="Animation" id=2]
resource_name = "AxeSwing"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ArmR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 45.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "AxeSwing_enemy"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ArmR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1, 1.2, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 45.0, -90.0, 45.0, -90.0, 45.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Bash"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ArmR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -120.0, -45.0, -45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.52588e-005, -45.0, 45.0, 45.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Bash_enemy"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ArmR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 1.7, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -150.0, -120.0, -45.0, -45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 1.7, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.52588e-005, 1.52588e-005, -15.0, 45.0, 45.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, -90.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ArmL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -120.0, -150.0, -180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ArmR:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, -160.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, -20 ), Vector2( -20, -25 ), Vector2( -20, -25 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body/ArmL/Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ArmL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, -20.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "ShieldUp_enemy"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body/ArmL/Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.7, 1.8, 1.9, 2 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ArmL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ArmR:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 43.4, 7.65882, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Tie"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.501961, 0.501961, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 24.5462

[node name="Viking" type="KinematicBody2D" groups=[
"viking",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
rotation = 2.66316e-007
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 30, 60 )

[node name="ArmL" type="Sprite" parent="Body"]
position = Vector2( 6, -4 )
texture = ExtResource( 5 )
offset = Vector2( 5, 4 )
region_rect = Rect2( 0, 0, 30, 60 )

[node name="Shield" type="Sprite" parent="Body/ArmL"]
position = Vector2( 1.23886, 6 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 2
hframes = 2

[node name="Head" type="Sprite" parent="Body"]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 30, 60 )

[node name="ArmR" type="Sprite" parent="Body"]
position = Vector2( -5, -4 )
texture = ExtResource( 5 )
offset = Vector2( 5, 4 )
region_rect = Rect2( 0, 0, 30, 60 )

[node name="Axe" type="Sprite" parent="Body/ArmR"]
position = Vector2( 4, 10 )
rotation = 0.785398
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
offset = Vector2( 15, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.06697, -0.444435 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AxeSwing = SubResource( 2 )
anims/AxeSwing_enemy = SubResource( 9 )
anims/Bash = SubResource( 3 )
anims/Bash_enemy = SubResource( 8 )
anims/Die = SubResource( 4 )
anims/ShieldUp = SubResource( 5 )
anims/ShieldUp_enemy = SubResource( 10 )
anims/Tie = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 5.62558, -5.1263 )
shape = SubResource( 7 )

[node name="Attack" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
